test/invalid/union_unfinished.d
//T error: union_unfinished.d:5:0:
//T error: expected 'CloseBrace', got 'End'.

union U {
